--- a/client/css/desktop.css
+++ b/client/css/desktop.css
@@ -16,6 +16,23 @@ header {
 	background-color: #eee
 }
 
+#loadingImage {
+	position: relative;
+	margin-top: 25px;
+
+	left: 50%;
+	transform: translate(-50%);
+	width: 100px;
+}
+
+#noResults{
+	text-align:  center;
+	margin-top: 25px;
+	width: 100%;
+
+	color: #424242;
+}
+
 #searchBox {
 	font-size: 20px;
 
@@ -75,7 +92,7 @@ header {
 .resultCooksIn {
 	grid-area: cooks;
 	margin-right: 25px;
-	font-size: 0.85em;
+	font-size: 0.8em;
 
 	color: #808080;
 
@@ -84,14 +101,104 @@ header {
 
 .resultServes {
 	grid-area: serves;
-	font-size: 0.85em;
+	font-size: 0.8em;
 
 	color: #808080;
 }
 
+#recipeContainer {
+	display: grid;
+	grid-template-areas:
+	'left main right';
+	
+	text-align: left;
 
+	margin-top: 25px;
+	background-color: #FFF;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
 
+#recipeLeft {
+	grid-area: left;
+	justify-self: end;
 
+	width: 300px;
+	margin: 25px 0 0 25px;
+}
+
+#recipeMain {
+	margin: 25px 0;
+	/*background-color: #f0f;*/
+
+	grid-area: main;
+	display: grid;
+	grid-gap: 25px;
+	grid-template-areas:
+	'image info'
+	'method method';
+	grid-template-columns: 200px auto;
+
+	width: 608px;
+}
+
+#recipeTitle > hr, #recipeIntro > hr {
+	margin-top: 15px;
+}
+
+#recipeRight {
+	grid-area: right;
+	width: 300px;
+	/*margin: 25px 0 25px 0;*/
+}
+
+#recipeFoodImage {
+	grid-area: image;
+	width: 200px;
+}
+
+#recipeInfo {
+	grid-area: info;
+	display: grid;
+	grid-template-areas:
+	'title'
+	'intro'
+	'info';
+}
+
+#recipeTitle {
+	grid-area: title;
+}
+
+#recipeIntro {
+	grid-area: intro;
+}
+
+#recipeCookingInfo {
+	grid-area: info;
+	align-self: end;
+	/*text-transform: uppercase;*/
+}
+
+#recipeMethod {
+	grid-area: method;
+}
+
+#recipeLeft > img {
+	width: 150px;
+	margin-bottom: 25px;
+	position: relative;
+	left: 50%;
+	transform: translate(-50%);
+}
+
+#recipeIngredients > ul {
+	list-style: none;
+	padding-left: 0;
+	margin-right: 15px;
+}
+#recipeIngredients > ul > li {
+	margin-top: 15px;
+}
 
 
 
